--- a/src/App.css
+++ b/src/App.css
@@ -3,7 +3,7 @@
   margin: 0 auto;
   padding: 2rem;
   text-align: center;
-  font-family: cursive, monospace;
+  font-family: monospace;
 }
 
 .main {
@@ -33,6 +33,7 @@
 .weather-search {
   display: flex;
   gap: .5rem;
+  font-family: sans-serif;
 }
 
 .weather-search input {
