--- a/src/App.css
+++ b/src/App.css
@@ -8,6 +8,7 @@
 
 .main {
   background-color: #242424;
+  color: #fff;
   padding: 1.5rem;
   border: 4px solid white;
   border-radius: 73% 27% 91% 9% / 15% 87% 13% 85% ;
