--- a/src/App.css
+++ b/src/App.css
@@ -46,3 +46,8 @@
   flex-direction: column;
   align-items: flex-start;
 }
+
+.random-region-map {
+  border-radius: 73% 27% 91% 9% / 15% 87% 13% 85% ;
+  border: 4px solid white;
+}
